<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="100"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_weight="45"
        android:weightSum="100"
        android:padding="20dp">

        <HorizontalScrollView
            android:layout_weight="10"
            android:id="@+id/expression_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:fillViewport="true">

            <TextView
                android:id="@+id/expression"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:text="@string/expression_default"
                android:textSize="23sp"
                android:textColor="@color/textPrimary"
                android:paddingBottom="10dp"
                android:textIsSelectable="true" />
        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_weight="90"
            android:id="@+id/result_scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="horizontal"
            android:fillViewport="true"
            android:fadeScrollbars="false">

            <TextView
                android:id="@+id/result"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:text="@string/result_default"
                android:textSize="64sp"
                android:textColor="@color/textPrimary"
                android:textIsSelectable="true" />
        </HorizontalScrollView>
    </LinearLayout>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_weight="55"
        android:layout_gravity="center"
        android:padding="5dp"
        android:layout_height="0dp"
        app:columnCount="4"
        app:rowCount="5"
        app:orientation="horizontal"
        android:background="@color/colorAccent">

        <Button
            app:layout_column="3"
            android:text="@string/button_clear"
            android:id="@+id/clear"
            style="@style/Button" />
        <Button
            android:text="@string/button_7"
            android:id="@+id/d7"
            style="@style/Button" />
        <Button
            android:text="@string/button_8"
            android:id="@+id/d8"
            style="@style/Button" />
        <Button
            android:text="@string/button_9"
            android:id="@+id/d9"
            style="@style/Button" />
        <Button
            android:text="@string/button_sub"
            android:id="@+id/sub"
            style="@style/Button" />
        <Button
            android:text="@string/button_4"
            android:id="@+id/d4"
            style="@style/Button" />
        <Button
            android:text="@string/button_5"
            android:id="@+id/d5"
            style="@style/Button" />
        <Button
            android:text="@string/button_6"
            android:id="@+id/d6"
            style="@style/Button" />
        <Button
            android:text="@string/button_add"
            android:id="@+id/add"
            style="@style/Button" />
        <Button
            android:text="@string/button_1"
            android:id="@+id/d1"
            style="@style/Button" />
        <Button
            android:text="@string/button_2"
            android:id="@+id/d2"
            style="@style/Button" />
        <Button
            android:text="@string/button_3"
            android:id="@+id/d3"
            style="@style/Button" />
        <Button
            android:text="@string/button_div"
            android:id="@+id/div"
            style="@style/Button" />
        <Button
            android:text="@string/button_point"
            android:id="@+id/point"
            style="@style/Button" />
        <Button
            android:text="@string/button_0"
            android:id="@+id/d0"
            style="@style/Button" />
        <Button
            android:text="@string/button_res"
            android:id="@+id/eqv"
            style="@style/Button" />
        <Button
            android:text="@string/button_mul"
            android:id="@+id/mul"
            style="@style/Button" />
    </android.support.v7.widget.GridLayout>
</LinearLayout>